Fix android.package in app.json (set valid application id)

--- a/app.json
+++ b/app.json
@@ -18,6 +18,7 @@
         "backgroundImage": "./assets/images/icon.png",
         "monochromeImage": "./assets/images/icon.png"
       },
+      "package": "com.memexo.horarionjyn",
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false
     },
@@ -43,6 +44,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "6fe115a1-2031-4a5f-afb6-c4d3c0391ace"
+      }
     }
   }
 }
